<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00F7F6F4"
    tools:context=".Business.MainActivity"><![CDATA[

    " />



















    ]]>

    <EditText
        android:id="@+id/ETdata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/data_di_nascita"
        android:inputType="date"
        android:textAlignment="center"
        android:textColorHint="#0829E2"
        app:layout_constraintBottom_toTopOf="@+id/ETpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="178dp"
        android:layout_height="161dp"
        android:layout_gravity="center"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/ETmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_launcher_round4" />

    <Button
        android:id="@+id/BtnLogin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="122dp"
        android:layout_height="55dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/mybutton"
        android:shadowColor="@color/colorPrimary"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:text="@string/button"
        android:textColor="#FCFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Sign In" />

    <EditText
        android:id="@+id/ETnumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="   Numero di Telefono"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColorHint="#0829E2"
        app:layout_constraintBottom_toTopOf="@+id/BtnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ETcognome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cognome"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="#0829E2"
        app:layout_constraintBottom_toTopOf="@+id/ETdata"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ETcopass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/conferma_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="#0829E2"
        app:layout_constraintBottom_toTopOf="@+id/ETnumero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ETmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorHint="#0829E2"
        app:layout_constraintBottom_toTopOf="@+id/ETnome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ETpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="#0829E2"
        app:layout_constraintBottom_toTopOf="@+id/ETcopass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ETnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="#0829E2"
        app:layout_constraintBottom_toTopOf="@+id/ETcognome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>